--- a/Party-organizer/Party-organizer/Storyboards/Base.lproj/Main.storyboard
+++ b/Party-organizer/Party-organizer/Storyboards/Base.lproj/Main.storyboard
@@ -253,6 +253,39 @@
                                     </view>
                                 </subviews>
                             </stackView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="hbe-6Y-zF7">
+                                <rect key="frame" x="0.0" y="216" width="375" height="250"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="250" id="BAB-9Z-n9X"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="memberCell" id="GHh-4t-Rrh">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GHh-4t-Rrh" id="QVd-xW-f6N">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="Sw5-kG-VF8" id="b8S-7s-ORh"/>
+                                    <outlet property="delegate" destination="Sw5-kG-VF8" id="Hml-vG-Dfa"/>
+                                </connections>
+                            </tableView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6T2-Qg-6m8">
+                                <rect key="frame" x="15" y="481" width="92.5" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Add description" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="lIq-9v-RtE">
+                                <rect key="frame" x="0.0" y="516.5" width="375" height="101.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                             <view alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9YC-G9-XmP">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -319,13 +352,22 @@
                         <constraints>
                             <constraint firstItem="1hN-bf-cVI" firstAttribute="bottom" secondItem="boo-wA-fmf" secondAttribute="bottom" id="2Fc-np-COn"/>
                             <constraint firstItem="WaP-7M-4ka" firstAttribute="trailing" secondItem="1hN-bf-cVI" secondAttribute="trailing" id="2dg-pc-tUk"/>
+                            <constraint firstItem="6T2-Qg-6m8" firstAttribute="leading" secondItem="WaP-7M-4ka" secondAttribute="leading" constant="15" id="4NI-yH-q8c"/>
+                            <constraint firstItem="WaP-7M-4ka" firstAttribute="bottom" secondItem="lIq-9v-RtE" secondAttribute="bottom" id="5qp-f0-arV"/>
+                            <constraint firstItem="lIq-9v-RtE" firstAttribute="leading" secondItem="WaP-7M-4ka" secondAttribute="leading" id="6cm-uc-lq6"/>
+                            <constraint firstItem="hbe-6Y-zF7" firstAttribute="leading" secondItem="WaP-7M-4ka" secondAttribute="leading" id="92K-l5-ILY"/>
+                            <constraint firstItem="lIq-9v-RtE" firstAttribute="top" secondItem="6T2-Qg-6m8" secondAttribute="bottom" constant="15" id="GYS-9F-Wdn"/>
                             <constraint firstItem="WaP-7M-4ka" firstAttribute="trailing" secondItem="9YC-G9-XmP" secondAttribute="trailing" id="IPC-6C-iFr"/>
                             <constraint firstItem="9YC-G9-XmP" firstAttribute="bottom" secondItem="boo-wA-fmf" secondAttribute="bottom" id="LLh-Of-oaF"/>
+                            <constraint firstItem="WaP-7M-4ka" firstAttribute="trailing" secondItem="lIq-9v-RtE" secondAttribute="trailing" id="M1K-Yq-xlm"/>
                             <constraint firstItem="9YC-G9-XmP" firstAttribute="height" secondItem="boo-wA-fmf" secondAttribute="height" id="Rpr-nr-bvZ"/>
                             <constraint firstItem="1hN-bf-cVI" firstAttribute="leading" secondItem="WaP-7M-4ka" secondAttribute="leading" id="Tk0-AN-Nql"/>
                             <constraint firstItem="t2s-Og-Vax" firstAttribute="top" secondItem="WaP-7M-4ka" secondAttribute="top" id="XGH-Yp-uj7"/>
                             <constraint firstItem="9YC-G9-XmP" firstAttribute="leading" secondItem="WaP-7M-4ka" secondAttribute="leading" id="Xme-s4-loV"/>
+                            <constraint firstItem="hbe-6Y-zF7" firstAttribute="top" secondItem="t2s-Og-Vax" secondAttribute="bottom" id="aDs-Th-fqH"/>
+                            <constraint firstItem="WaP-7M-4ka" firstAttribute="trailing" secondItem="hbe-6Y-zF7" secondAttribute="trailing" id="cZR-2u-33z"/>
                             <constraint firstItem="t2s-Og-Vax" firstAttribute="leading" secondItem="WaP-7M-4ka" secondAttribute="leading" id="p2C-BK-Fsn"/>
+                            <constraint firstItem="6T2-Qg-6m8" firstAttribute="top" secondItem="hbe-6Y-zF7" secondAttribute="bottom" constant="15" id="y56-Kg-Uzx"/>
                             <constraint firstItem="WaP-7M-4ka" firstAttribute="trailing" secondItem="t2s-Og-Vax" secondAttribute="trailing" id="zne-sV-lAc"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="WaP-7M-4ka"/>
@@ -336,6 +378,10 @@
                         <outlet property="datePicker" destination="HNJ-SY-Xuy" id="RYT-ax-j41"/>
                         <outlet property="datePickerHolder" destination="1hN-bf-cVI" id="kak-Z9-aaW"/>
                         <outlet property="datePickerHolderBottom" destination="2Fc-np-COn" id="ol7-33-P44"/>
+                        <outlet property="descriptionTextView" destination="lIq-9v-RtE" id="KUf-wG-CUe"/>
+                        <outlet property="partyNameLabel" destination="UVE-Vg-6Mj" id="URm-EE-9hg"/>
+                        <outlet property="startDateLabel" destination="7hX-1P-dhG" id="a6X-76-t5Y"/>
+                        <outlet property="tableView" destination="hbe-6Y-zF7" id="iwy-I8-Ji7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ut9-gj-to8" userLabel="First Responder" sceneMemberID="firstResponder"/>
